--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ target/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -98,3 +98,10 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+
+# User defined
+.idea/
+*.db
+*.png
+
+jquery*.*
