完善功能与BUG修复

--- a/config.ini
+++ b/config.ini
@@ -2,16 +2,11 @@
 db_filename = data.db
 sql_filename = InitDataBase.sql
 log_filename = log.txt
-global_pos = Z:\Temp
+global_pos = Z:\Pictures
 site_name = ÏÂÔØÆ÷
-task_time = 12
-name_rule = url
 date_checking_interval = 600
 worker_checking_interval = 5
+cleaner_checking_interval = 86400
 port_name = 80
-downloader = aria2
-check_if_success = auto
-size_if_success = 4096
 max_threads = 32
 max_buf = 4096
-
