--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 db_filename = data.db
 sql_filename = InitDataBase.sql
 log_filename = log.txt
-global_pos = Z:\Pictures
+global_pos = z:\temp\PicDownloader_zf58e8
 site_name = ÏÂÔØÆ÷
 date_checking_interval = 600
 worker_checking_interval = 5
