--- a/config.ini
+++ b/config.ini
@@ -10,4 +10,6 @@ cleaner_checking_interval = 86400
 port_name = 80
 max_threads = 32
 max_buf = 4096
-
+check_server_port = 53
+check_server_ip = 8.8.8.8
+check_server_time_out = 0.8
