Update js, css and all other stuff

--- a/config.ini
+++ b/config.ini
@@ -3,10 +3,10 @@ db_filename = data.db
 sql_filename = InitDataBase.sql
 log_filename = log.txt
 global_pos = Z:\Pictures
-site_name = 下载器
+site_name = 图片数据下载平台
 date_checking_interval = 600
 worker_checking_interval = 5
-cleaner_checking_interval = 8640
+cleaner_checking_interval = 86400
 port_name = 80
 max_threads = 32
 max_buf = 4096
