修改日志功能，精简HTML代码

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 db_filename = data.db
 sql_filename = InitDataBase.sql
 log_filename = log.txt
+max_log = 128
 global_pos = Z:\Pictures
 site_name = 图片数据下载平台
 date_checking_interval = 600
