修正一些小的错误，初步增加文档

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ db_filename = data.db
 sql_filename = InitDataBase.sql
 log_filename = log.txt
 max_log = 128
-global_pos = Z:\Pictures
+global_pos = D:\Pictures
 site_name = 图片数据下载平台
 date_checking_interval = 600
 worker_checking_interval = 5
@@ -11,7 +11,7 @@ cleaner_checking_interval = 86400
 port_name = 80
 max_threads = 32
 max_buf = 4096
-check_server_port = 53
-check_server_ip = 8.8.8.8
+check_server_port = 80
+check_server_ip = www.baidu.com
 check_server_time_out = 0.8
 disk_quota = true
